perf: optimize neural inference for 6GB VRAM and finalize production architecture
- Infrastructure: Enabled xFormers and Channels Last memory formats in SD and Video generators to eliminate VRAM swapping on GTX 1060 hardware.
- Documentation: Overhauled README.md with Hexagonal Architecture diagrams, Heuristic Logic flows, and Performance Engineering benchmarks.
- API: Configured FastAPI root_path for Nginx proxy compatibility and synchronized status reporting with i18n dictionary keys.
- Domain: Expanded character DNA library with high-fidelity metadata for Ryo, Takuma, and Yuri Sakazaki.
- Presentation: Refined UI navigation logic and updated multi-language localization (EN/ES) for real-time telemetry.

--- a/src/presentation/i18n/en.json
+++ b/src/presentation/i18n/en.json
@@ -220,5 +220,7 @@
     "status_init_motion": "INITIALIZING MOTION ENGINE...",
     "hud_total_frames": "TOTAL_FRAMES",
     "hud_target_fps": "TARGET_FPS",
-    "alert_no_still": "SYSTEM_ERROR: Please upload an original still image first."
+    "alert_no_still": "SYSTEM_ERROR: Please upload an original still image first.",
+
+    "status_preparing_control_maps": "PREPARING_CONTROL_MAPS..."
 }
